Ticker dropdown and datepicker

--- a/src/app/rates/rates.component.scss
+++ b/src/app/rates/rates.component.scss
@@ -7,6 +7,12 @@ table {
   }
 }
 
+button {
+  margin: 10px;
+  vertical-align: super;
+  padding: 5px;
+}
+
 .content {
   padding: 20px;
   margin: 20px;
