--- a/src/app/rates/rates.component.html
+++ b/src/app/rates/rates.component.html
@@ -1,6 +1,18 @@
 <div class="mat-elevation-z8 content">
+  <mat-form-field appearance="fill">
+    <mat-label>Choose a date</mat-label>
+    <input matInput [matDatepicker]="picker">
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+  <mat-form-field appearance="fill">
+    <mat-label>Currency ticker</mat-label>
+    <mat-select>
+      <mat-option *ngFor="let ticker of tickers" [value]="ticker">{{ticker}}</mat-option>
+    </mat-select>
+  </mat-form-field>
   <button (click)="getRates()" mat-raised-button color="primary">Get</button>
-  <mat-paginator [pageSizeOptions]="[10, 50,  200]"
+  <mat-paginator [pageSizeOptions]="[10, 50, 200]"
                  [pageSize]="10"
                  showFirstLastButtons
                  aria-label="Select page">
