--- a/src/app/rates/rates.component.html
+++ b/src/app/rates/rates.component.html
@@ -7,7 +7,7 @@
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Currency ticker</mat-label>
-    <mat-select>
+    <mat-select [(value)]="ticker">
       <mat-option *ngFor="let ticker of tickers" [value]="ticker">{{ticker}}</mat-option>
     </mat-select>
   </mat-form-field>
