--- a/src/app/rates/rates.component.html
+++ b/src/app/rates/rates.component.html
@@ -1,7 +1,7 @@
 <div class="mat-elevation-z8 content">
   <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker">
+    <input matInput [matDatepicker]="picker" [(ngModel)]="ratesDate">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
