--- a/src/app/rates/rates.component.html
+++ b/src/app/rates/rates.component.html
@@ -1,13 +1,13 @@
 <div class="mat-elevation-z8 content">
   <mat-form-field appearance="fill">
     <mat-label>Choose a date</mat-label>
-    <input matInput [matDatepicker]="picker" [(ngModel)]="ratesDate">
+    <input matInput [matDatepicker]="picker" [(ngModel)]="ratesDate" (dateChange)="onInputChange()">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
   <mat-form-field appearance="fill">
     <mat-label>Currency ticker</mat-label>
-    <mat-select [(value)]="ticker">
+    <mat-select [(value)]="ticker" (selectionChange)="onInputChange()">
       <mat-option *ngFor="let ticker of tickers" [value]="ticker">{{ticker}}</mat-option>
     </mat-select>
   </mat-form-field>
@@ -17,17 +17,17 @@
                  showFirstLastButtons
                  aria-label="Select page">
   </mat-paginator>
-  <table mat-table [dataSource]="ratesSource">
+  <table mat-table matSort  [dataSource]="ratesSource">
     <!-- Ticker Column -->
     <ng-container matColumnDef="ticker">
-      <th mat-header-cell *matHeaderCellDef> Ticker </th>
-      <td mat-cell *matCellDef="let element"> {{element.ticker}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ticker</th>
+      <td mat-cell *matCellDef="let element">{{element.ticker}} </td>
     </ng-container>
 
     <!-- Rate Column -->
     <ng-container matColumnDef="rate">
-      <th mat-header-cell *matHeaderCellDef> Rate </th>
-      <td mat-cell *matCellDef="let element"> {{element.rate}} </td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Rate</th>
+      <td mat-cell *matCellDef="let element">{{element.rate}} </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
